Franz/expand faq (#1133)
* Added new faq and moved a few around

--- a/docs/de-de/modules/webshop/pages/faq-lts.adoc
+++ b/docs/de-de/modules/webshop/pages/faq-lts.adoc
@@ -5,7 +5,7 @@
 :author: team-webshop
 
 ////
-zuletzt bearbeitet 19.09.22
+zuletzt bearbeitet 20.09.22
 ////
 
 // TODO: Alle FAQs aus Forum importieren
@@ -47,6 +47,14 @@ Falls du selbst Entwickler:in bist und dich in der Weiterentwicklung von plentyS
 --
 
 In unserem link:https://www.youtube.com/watch?v=s_9DCTlF_qg[Livestream^] am 17. April 2020 haben wir euch das Arbeiten mit dem ShopBuilder vom ersten Schritt bis zum fertigen, voll funktionstüchtigen plentyShop vorgestellt. Außerdem zeigt der Live-Mitschnitt viele neue Funktionen von plentyShop LTS, wie beispielsweise Artikelsets und neue Widgets für die Suche. Der Live-Mitschnitt ist ein toller Einstiegspunkt für plentyShop-Neulinge.
+
+--
+
+[.collapseBox]
+.*Wie gehe ich am besten bei einem Update von plentyShop LTS vor?*
+--
+
+Am besten hältst du dich beim Updaten von plentyShop LTS an link:https://knowledge.plentymarkets.com/de-de/manual/main/webshop/best-practices.html#updates[diesen Best Practice^].
 
 --
 
@@ -105,6 +113,20 @@ Das liegt vermutlich am Cache. Dein Shop ist noch auf einem älteren Stand als d
 --
 
 [.collapseBox]
+.*In meinem plentyShop werden veraltete Daten angezeigt. Wieso werden meine Änderungen nicht live im Shop angezeigt?*
+--
+Falls du den *ShopBooster* nutzt, musst du den Cache möglicherweise einmal selbst invalidieren. Wie das geht, erfährst du auf der xref:webshop:ceres-einrichten#sofort-invalidieren[plentyShop LTS Handbuchseite].
+
+--
+
+[.collapseBox]
+.*Warum wird im Beschreibungstext meiner Kategorie im Shop etwas anderes angezeigt, als ich im Backend gespeichert habe?*
+--
+Für plentyShops, die mit dem ShopBuilder gestaltet werden, greifen die alten Kategorieeinstellungen nicht mehr vollumfänglich. Falls du im Menü *Artikel » Kategorien* Texte in den Kategorieeinstellungen gepflegt hast (bspw. in den Tabs *Beschreibung 1*, *Beschreibung 2* oder *Template*), musst du diese Texte auch in den betreffenden ShopBuilder-Inhalten pflegen, da die Texte nicht automatisch übernommen werden können.
+--
+
+
+[.collapseBox]
 .*In meinem Shop kommt die Fehlermeldung "Bei der Versandkostenberechnung kam es zu einem Fehler. Bitte benachrichtigen Sie den Betreiber." Was kann ich dagegen tun?*
 --
 
@@ -136,12 +158,11 @@ Beachte beim Upload-Prozess, dass du maximal 10 Dateien auf einmal hochladen kan
 
 --
 
+=======
 [.collapseBox]
 .*In meinem plentyShop werden veraltete Daten angezeigt. Wieso werden meine Änderungen nicht live im Shop angezeigt?*
 --
 Falls du den *ShopBooster* nutzt, musst du den Cache möglicherweise einmal selbst invalidieren. Wie das geht, erfährst du auf der xref:webshop:ceres-einrichten#sofort-invalidieren[plentyShop LTS Handbuchseite].
-
---
 
 ////
 [#frequent-questions]
@@ -154,6 +175,7 @@ Falls du den *ShopBooster* nutzt, musst du den Cache möglicherweise einmal selb
 Am besten hältst du dich beim Updaten von plentyShop LTS an link:https://knowledge.plentymarkets.com/de-de/manual/main/webshop/best-practices.html#updates[diesen Best Practice^].
 
 --
+
 
 [.collapseBox]
 .*Wie tausche ich das Firmenlogo aus?*
@@ -175,7 +197,7 @@ Achte auf die Sichtbarkeit des Headers. Wenn du unterschiedliche Header im Einsa
 --
 
 [.collapseBox]
-.* Wie kann ich einstellen, welche Variante auf der Artikelkachel in der Kategorie angezeigt wird?*
+.*Wie kann ich einstellen, welche Variante auf der Artikelkachel in der Kategorie angezeigt wird?*
 --
 Welche Variante auf der Artikelkachel gezeigt wird, kannst du mit der Einstellung *Sortierung der Varianten für die Artikelkachel* im plentyShop LTS Assistenten einstellen. Die Einstellung findest du im Schritt *Seitennummerierung und Sortierung*.
 
