Updated all paths that were changed in the context of the plentyShop System Tree cleanup. (DE)

--- a/docs/de-de/modules/artikel/pages/kategorien.adoc
+++ b/docs/de-de/modules/artikel/pages/kategorien.adoc
@@ -625,7 +625,7 @@ IMPORTANT: Die eingegebenen Rabatte gelten nur für die Standardkategorie einer 
 [.instruction]
 Kategorierabatte speichern:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Kategorien » Rabatte*.
+. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Kategorierabatte*.
 . Nimm die Einstellungen vor.
 . *Speichere* (terra:save[role="green"]) die Einstellungen. +
 → Der Rabatt wird automatisch im plentyShop angewendet, wenn die rabattfähige Menge bestellt wird. +
