--- a/docs/de-de/modules/business-entscheidungen/pages/_aenderungen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/_aenderungen.adoc
@@ -384,7 +384,7 @@ Wenn ein Artikel keine Varianten mit Attributverknüpfungen hat, stehen alle Inh
 
 == Live-Shopping
 
-**Einrichtung » Mandant » Global » Live-Shopping**
+**Einrichtung » Mandant » Global » Webshop » Live-Shopping**
 
 * Der Verkaufspreis für Live-Shopping-Angebote wird nun automatisch anhand der Verkaufspreis-Einstellungen gewählt. Es muss ein Verkaufspreis des Preistyps **Aktionspreis** erstellt und dieser Verkaufspreis am Artikel hinterlegt sein.
 
