--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg.adoc
@@ -39,7 +39,7 @@ Jetzt bist du aber wirklich startklar.
 Mit dem Einrichten beginnen:
 
 . Melde dich mit deinem Benutzernamen und deinem Passwort in deinem System an.
-. Öffne das Menü *Einrichtung » Mandant » Standard Shop (Standard) » Webshop » Shop sperren*.
+. Öffne das Menü *Einrichtung » Mandant » Global » Webshop » Shop sperren*.
 . Klicke auf *Webshop jetzt sperren*. +
 → Dein Webshop ist für Kunden nicht mehr sichtbar. Du kannst also in Ruhe alle notwendigen Einstellungen vornehmen.
 
