--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-letzte-schritte.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-letzte-schritte.adoc
@@ -78,7 +78,7 @@ Wenn du deinen Shop erweiterst und tiefer in das plentymarkets System einsteigst
 ====
 Das Handbuch beschreibt die Funktionalität von plentymarkets gemäß der Beta-Version. Neue Systeme werden jedoch in der Version Stable ausgeliefert. Dies hat zur Folge, dass einige Angaben im Handbuch möglicherweise bis zu zwei Wochen lang von deiner Systemumgebung abweichen.
 
-Wenn du dein System auf eine andere Version umstellen möchtest, findest du Information dazu in deinem Backend im Menü *Einrichtung » Mandant » Standard-Shop (Standard) » Version*.
+Wenn du dein System auf eine andere Version umstellen möchtest, findest du Information dazu in deinem Backend im Menü *Einrichtung » Mandant » Global » Version*.
 ====
 
 [#50]
