CHANGE: Changed system tree paths that were overhauled in the plentyShop system tree cleanup. (EN)

--- a/docs/en-gb/modules/item/pages/categories.adoc
+++ b/docs/en-gb/modules/item/pages/categories.adoc
@@ -625,7 +625,7 @@ IMPORTANT: The discounts only apply to a variation's default category.
 [.instruction]
 Saving category discounts:
 
-. Go to *Setup » Client » [Select client] » Categories » Discounts*.
+. Go to *Setup » Client » [Select client] » Categories discounts*.
 . Carry out the settings.
 . *Save* (terra:save[role="green"]) the settings. +
 → The discount will automatically be applied when a customer orders the required number of variations in the plentyShop. +
