--- a/docs/en-gb/modules/markets/pages/etsy.adoc
+++ b/docs/en-gb/modules/markets/pages/etsy.adoc
@@ -103,7 +103,7 @@ Activating the interface:
 → plentymarkets can access your Etsy account. +
 → You can continue the setup. +
 *_Troubleshooting:_* Are you redirected to the start page of your plentyShop? +
-  ** Your plentyShop is probably locked. Go to *Setup » Client » Standard » Online store » Lock store* to unlock your plentyShop. Remember to lock the plentyShop again once you have completed the authentication.
+  ** Your plentyShop is probably locked. Go to *Setup » Client » Settings » Online store » Lock store* to unlock your plentyShop. Remember to lock the plentyShop again once you have completed the authentication.
 
 [#300]
 === Activating the data exchange
