--- a/docs/en-gb/modules/online-store/pages/setting-up-ceres.adoc
+++ b/docs/en-gb/modules/online-store/pages/setting-up-ceres.adoc
@@ -938,12 +938,12 @@ In the *CMS » Multilingualism* menu, you can enter meta descriptions for the st
 [#2040]
 ==== Editing trailing slashes
 
-You can carry out settings pertaining to trailing slashes of the URLs of your plentyShop in the *Setup » Client » Select client » SEO » URL structure* menu.
+You can carry out settings pertaining to trailing slashes of the URLs of your plentyShop in the *Setup » Client » Select client » Online store » SEO » URL structure* menu.
 
 [#2041.instruction]
 Editing trailing slashes:
 
-. Go to *Setup » Client » Select client » SEO » URL structure » Other*.
+. Go to *Setup » Client » Select client » Online store » SEO » URL structure » Other*.
 . Select the desired option from the *Trailing slash* drop-down list.
 . *Save* the settings.
 
