--- a/docs/en-gb/modules/online-store/pages/shop-builder.adoc
+++ b/docs/en-gb/modules/online-store/pages/shop-builder.adoc
@@ -1435,7 +1435,7 @@ Provides a container for live shopping items. Click *Edit* icon:cog[role="darkGr
 |Setting |Explanation
 
 | *Live shopping selection*
-|Select one of 10 possible live shopping profiles that are set up in the *Setup » System settings » Client » Global » Live shopping* menu.
+|Select one of 10 possible live shopping profiles that are set up in the *Setup » Client » Settings » Online store » Live shopping* menu.
 
 | *Sorting*
 |Select the sorting option by which the variation is selected that is displayed as the first variation.
