--- a/docs/en-gb/modules/welcome/pages/quick-start-final-steps.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-final-steps.adoc
@@ -39,7 +39,7 @@ Deactivating the test mode:
 [.instruction]
 Unlocking the webshop:
 
-. Go to *Setup » Client » Standard Shop (Standard) » webshop » Lock store.*
+. Go to *Setup » Client » Settings » Online store » Lock store.*
 . Click on *Unlock webshop now*.
 
 icon:rocket[role="blue"] *Congratulations! Your store is now online!* icon:rocket[role="blue"]
@@ -78,7 +78,7 @@ As you continue to dive deeper into the plentymarkets system to extend your stor
 ====
 The manual describes the functionality of plentymarkets systems according to the beta version. However, by default, new systems use the stable version. As a result, some parts of the manual may deviate from your system environment for up to two weeks.
 
-If you want to switch to a different version, open your back end and go to *Setup » Client » Standard-Shop (Standard) » Version* for further information.
+If you want to switch to a different version, open your back end and go to *Setup » Client » Settings » Version* for further information.
 ====
 
 [#50]
