--- a/docs/de-de/modules/auftraege/pages/dokumentenarchiv-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/dokumentenarchiv-testphase.adoc
@@ -34,7 +34,7 @@ Folgende Dokumenttypen sind im Dokumentenarchiv verfügbar:
 * xref:auftraege:ruecksendeschein-erzeugen.adoc#[Rücksendescheine]
 * xref:auftraege:auftraege-verwalten.adoc#850[Sammelgutschriften]
 * xref:auftraege:auftraege-verwalten.adoc#840[Sammelrechnungen]
-* xref:auftraege:auftraege-verwalten.adoc#530[Stornobeleg Gutschriften]
+* xref:auftraege:auftraege-verwalten.adoc#540[Stornobeleg Gutschriften]
 * xref:auftraege:mahnungen-erzeugen.adoc#400[Stornobeleg Mahnungen]
 * xref:auftraege:rechnungen-erzeugen.adoc#400[Stornobeleg Rechnungen]
 =====
@@ -106,11 +106,11 @@ Dies ist eine Standardspalte.
 Dies ist eine Standardspalte.
 
 | *Dokumentnummer*
-|Zeigt die Nummer des Dokuments an. +
+|Zeigt die Nummer des Dokuments an. Mit Klick auf die Dokumentnummer wird diese in die Zwischenablage kopiert. +
 Dies ist eine Standardspalte.
 
 | *Auftrags-ID*
-|Zeigt die ID des Auftrags an, aus dem das Dokument stammt. Mit Klick auf die Auftrags-ID wird der Auftrag geöffnet. +
+|Zeigt die ID des Auftrags an, aus dem das Dokument stammt. Mit Klick auf die ID wird der Auftrag geöffnet. +
 Dies ist eine Standardspalte.
 
 | *Eigner*
@@ -137,16 +137,20 @@ Dies ist eine Standardspalte.
 |Zeigt das Datum an, an dem zuletzt eine Änderung an dem Dokument vorgenommen wurde. +
 Diese Spalte wird standardmäßig nicht angezeigt.
 
-| *Stornobeleg*
-|Zeigt den Stornobeleg des Dokuments an, falls dieser existiert. +
+| *Storniert durch*
+|Zeigt den Stornobeleg des Dokuments an, falls eine Stornierung existiert. +
+Diese Spalte wird standardmäßig nicht angezeigt.
+
+| *Storniert [Dokument]*
+|Zeigt an, welches Dokument jeweils storniert wird. +
 Diese Spalte wird standardmäßig nicht angezeigt.
 
 |===
 
 [TIP]
-.Seitennavigation ein- oder ausblenden
+.Seitenleiste standardmäßig eingeklappt
 ======
-Im Dokumentenarchiv hast du die Möglichkeit, die Seitennavigation ein- oder auszuklappen. Klicke dazu oben links auf material:menu[].
+Im Dokumentenarchiv ist die Seitenleiste standardmäßig eingeklappt, da dort keine weiteren Informationen zur Verfügung stehen. Klicke oben links auf material:menu[], um die Seitenleiste auszuklappen.
 ======
 
 [#search-for-documents]
@@ -183,7 +187,7 @@ Um im Dokumentenarchiv noch gezielter nach Dokumenten zu suchen, stehen dir die 
 |Filtert nach Dokumenten mit dieser Kontakt-ID.
 
 | *Dokumenttyp*
-|Filtert nach Dokumenten dieses Typs.
+|Filtert nach Dokumenten dieses Typs. Du kannst auch mehrere Dokumenttypen auf einmal wählen.
 
 | *Mandant*
 |Filtert nach Dokumenten dieses Mandanten.
@@ -230,12 +234,6 @@ Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und ein
 . Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
 . Klicke auf eine bereits erstellte Filtereinstellung. +
 → Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als Chips dargestellt.
-
-[TIP]
-.Dokumentenvorschau, Auftrag oder Kontakt öffnen
-======
-Mit Klick auf den Dokumentname, die Auftrags-ID oder die Kontakt-ID kannst du jeweils die Vorschau des Dokuments, den Auftrag oder den Kontakt öffnen.
-======
 
 [#download-documents]
 == Dokumente herunterladen
