--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -168,7 +168,8 @@ material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. W
 // TODO: Insert link
 
 ! material:play_circle_outline[] *Live-Export*
-! Lade die Katalogdaten in einer Datei auf deinen Rechner herunter.
+! Lade die Katalogdaten als Datei herunter. Diese Datei wird automatisch auf deinem Rechner gespeichert, wenn der Export abgeschlossen ist.
+// TODO: Insert link
 
 ! material:preview[] *Vorschau*
 ! Erstelle eine Vorschau des Exports. Die Vorschau enthält die ersten fünf Datenzeilen des Exports.
