--- a/docs/en-gb/modules/orders/pages/document-archive-test-phase.adoc
+++ b/docs/en-gb/modules/orders/pages/document-archive-test-phase.adoc
@@ -47,7 +47,7 @@ The following document types are available in the document archive:
 * xref:pos:plentymarkets-pos-for-pos-users.adoc#210[POS cancellations]
 * xref:pos:plentymarkets-pos-for-pos-users.adoc#210[POS invoice cancellations]
 * xref:pos:plentymarkets-pos-for-pos-users.adoc#450[POS till counts]
-* xref:pos:plentymarkets-pos-for-pos-users.adoc#230[POS z reports]
+* xref:pos:plentymarkets-pos-for-pos-users.adoc#230[POS Z reports]
 =====
 
 [.col-md-4]
