fix missing image

--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -617,7 +617,7 @@ image::daten:ergebnis-export-street.png[]
 ._Optional:_ Zahlenwerte neu berechnen (*Formel*)
 --
 
-Mit mathematischen Berechnungen passt du Werte während des Exports automatisch an.
+Mit mathematischen Berechnungen passt du Zahlenwerte während des Exports automatisch an.
 
 * Diese Funktion ist neu und noch nicht für alle Formate verfügbar.
 * Diese Funktion funktioniert nur bei Datenfeldern, die Zahlenwerte enthalten.
