--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -289,7 +289,7 @@ image::maerkte:gif-catalogue-own-value-de.gif[width=600]
 --
 
 //tag::formula-config[]
-Mit mathematischen Berechnungen passt du Werte während des Exports automatisch an.
+Mit mathematischen Berechnungen passt du Zahlenwerte während des Exports automatisch an.
 
 * Diese Funktion funktioniert nur bei Datenfeldern, die Zahlenwerte enthalten.
 * Diese Funktion ist neu und ist noch nicht für alle Formate verfügbar.
