--- a/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
@@ -240,9 +240,9 @@ include::maerkte:partial$catalogue-mapping.adoc[tag=own-mappings-config]
 === Zahlenwerte neu berechnen (Formel)
 
 [discrete]
-===== Du speicherst eine Formel, die beim Export auf Zahlenwerte angewendet wird
+===== Du speicherst eine Formel. Diese Formel wird beim Export auf Zahlenwerte angewendet.
 
-Mit mathematischen Berechnungen passt du Werte während des Exports automatisch an.
+Mit mathematischen Berechnungen passt du Zahlenwerte während des Exports automatisch an.
 
 * Diese Funktion ist neu und noch nicht für alle Marktplatzformate verfügbar.
 * Diese Funktion funktioniert nur bei Datenfeldern, die Zahlenwerte enthalten.
@@ -251,6 +251,7 @@ Du legst also fest:
 
 * Ich möchte, dass der Zahlenwert eines plentymarkets Datenfelds beim Export neu berechnet wird. Für die Formeln sind die Grundrechenarten verfügbar.
 
+////
 *_Beispiel:_*
 
 Du möchtest einen Bestandspuffer für den Marktplatz einrichten. Vom Bestand wird also beim Export eine festgelegte Menge abgezogen. Im Katalog erstellst du dazu die folgende Formel:
@@ -258,6 +259,9 @@ Du möchtest einen Bestandspuffer für den Marktplatz einrichten. Vom Bestand wi
 [[katalog-formel]]
 .Formel für Bestandspuffer
 image::daten:catalogue-stock-buffer.png[]
+
+TODO: Screenshot einfügen
+////
 
 [.collapseBox]
 .Zuordnung mit mathematischer Berechnung erstellen
