--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -532,7 +532,7 @@ In diesem Bereich nimmst du die sprachabhängigen Einstellungen vor. Für jede V
 Für jede erstellte Sprache siehst du einen eigenen Bereich. Mit einem Klick auf material:expand_more[] kannst du einzelne Sprachbereiche zuklappen. Ein Klick auf material:chevron_right[] öffnet den Sprachbereich wieder.
 
 |[#intable-template-settings-subject]*Betreff*
-|Hier siehst du den Betreff der Vorlage. Du kannst den Betreff anpassen, wenn gewünscht. +
+|Hier siehst du den Betreff der Vorlage. Du kannst den <<#betreff-aendern, Betreff anpassen>>, wenn gewünscht. +
 *_Hinweis:_* Bei Vorlagen vom Typ *Header* und *Footer* ist dieses Feld _nicht_ verfügbar.
 
 |[#intable-template-settings-static-attachments]*Statische Anhänge*
@@ -789,7 +789,7 @@ image::crm:emailbuilder-beispiel-standardvorlage.png[width=640, height=360]
 [#standardvorlage-erstellen]
 ==== Standardvorlage erstellen
 
-Insgesamt 12 Standardvorlagen sind in deutscher und englischer Sprache in deinem plentymarkets System verfügbar. Beim Erstellen einer neuen Vorlage kannst du eine dieser Standardvorlagen wählen und ggf. noch anpassen. Welche Standardvorlagen es gibt und wie deren Betreff ist, liest du im Kapitel <<#standardvorlagen-name-und-betreff, Verfügbare Standardvorlagen>>.
+12 Standardvorlagen sind in deutscher und englischer Sprache in deinem plentymarkets System verfügbar. Beim Erstellen einer neuen Vorlage kannst du eine dieser Standardvorlagen wählen und ggf. noch anpassen. Welche Standardvorlagen es gibt und wie deren Betreff ist, liest du im Kapitel <<#standardvorlagen-name-und-betreff, Verfügbare Standardvorlagen>>.
 
 [.instruction]
 Standardvorlage erstellen:
@@ -806,11 +806,20 @@ Standardvorlage erstellen:
 . *Speichere* (material:save[]) die Einstellungen. +
 → Die Vorlage wird erstellt und geöffnet. 
 
-Sobald die Standardvorlage erstellt ist, siehst du im Editor den vorausgefüllten Inhalt. Den Inhalt kannst du mit einem Klick auf material:edit[] anpassen. +
-In der Symbolleiste siehst du den vorausgefüllten Betreff. Den Betreff kannst du mit einem Klick auf material:translate[] ganz oben rechts anpassen. Dort wählst du auch bis zu 3 statische Anhänge, die du an die E-Mail-Vorlage anhängen möchtest. +
-Im Bereich *Einstellungen* wählst du einen Eigner, den Mandanten und den Header und Footer, falls noch nicht geschehen. Dort kannst du auch bis zu 3 dynamische Anhänge wählen und die Felder *Antwort an*, *CC* und *BCC* befüllen.
+[TIP]
+Wenn du die Standardvorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und klicke dann auf material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
 
-*_Hinweis:_* Wenn du die Standardvorlage nicht innerhalb eines Ordners erstellen möchtest, klicke auf der Startseite des Menüs *CRM » EmailBuilder (Testphase)* direkt unten links auf material:add[] *Hinzufügen* material:play_arrow[] und klicke dann auf material:description[] *Vorlage*. Die Vorlage wird dann auf der ersten Ebene erstellt, ohne dass sie zu einem Ordner gehört.
+[#standardvorlage-betreff-aendern]
+==== Betreff ändern
+
+Sobald die Standardvorlage erstellt ist, siehst du in der Symbolleiste den vorausgefüllten Betreff. Den Betreff kannst du mit einem Klick auf *Sprachabhängige Einstellungen* (material:translate[]) ganz oben rechts anpassen. Dort wählst du auch bis zu 3 statische Anhänge, die du an deine E-Mail-Vorlage anhängst. Ebenfalls in diesem Bereich kannst du das xref:crm:emailbuilder.adoc#beispiele-benutzerdefiniertes-styling[benutzerdefinierte Styling] der Vorlage wie zum Beispiel die Breite der Vorlage oder die Schriftgröße ändern.
+
+[#standardvorlage-bearbeiten]
+==== Standardvorlage bearbeiten
+
+Neben den sprachabhängigen Einstellungen, in denen du beispielsweise den <<#standardvorlage-betreff-aendern, Betreff ändern>> und statische Anhänge für deine Standardvorlage wählen kannst, kannst du den Inhalt der Standardvorlage selbst mit einem Klick auf material:edit[] anpassen. 
+
+Im Bereich *Einstellungen* der Vorlage wählst du einen Eigner, den Mandanten und den Header und Footer, falls noch nicht geschehen. Dort kannst du auch bis zu 3 dynamische Anhänge wählen und die Felder *Antwort an*, *CC* und *BCC* befüllen.
 
 [#standardvorlagen-name-und-betreff]
 ==== Verfügbare Standardvorlagen
@@ -1037,6 +1046,15 @@ Vorlage bearbeiten:
 . Nimm die Änderungen vor. Beachte dazu auch die Erläuterungen in <<#table-emailbuilder-create-template>>.
 . *Speichere* (material:save[]) die Einstellungen.
 
+Neben den sprachabhängigen Einstellungen, in denen du beispielsweise den <<#betreff-aendern, Betreff ändern>> und statische Anhänge für deine Standardvorlage wählen kannst, kannst du den Inhalt der Standardvorlage selbst mit einem Klick auf material:edit[] anpassen. 
+
+Im Bereich *Einstellungen* der Vorlage wählst du einen Eigner, den Mandanten und den Header und Footer, falls noch nicht geschehen. Dort kannst du auch bis zu 3 dynamische Anhänge wählen und die Felder *Antwort an*, *CC* und *BCC* befüllen.
+
+[#betreff-aendern]
+=== Betreff ändern
+
+Sobald die Vorlage erstellt ist, siehst du in der Symbolleiste den vorausgefüllten Betreff. Den Betreff kannst du mit einem Klick auf *Sprachabhängige Einstellungen* (material:translate[]) ganz oben rechts anpassen. Dort wählst du auch bis zu 3 statische Anhänge, die du an deine E-Mail-Vorlage anhängst. Ebenfalls in diesem Bereich kannst du das xref:crm:emailbuilder.adoc#beispiele-benutzerdefiniertes-styling[benutzerdefinierte Styling] der Vorlage wie zum Beispiel die Breite der Vorlage oder die Schriftgröße ändern.
+
 [#sprache-hinzufuegen]
 === Sprache zur Vorlage hinzufügen
 
@@ -1225,7 +1243,7 @@ Im Kapitel <<#verfuegbare-variablen, Verfügbare Variablen>> findest du neben de
 
 Wenn du eine twig expression im Betreff der Vorlage verwenden möchtest, muss diese von doppelt geschweiften Klammern umgeben sein.
 
-*_Beispiel:_* Wenn du im Betreff deiner Vorlage den Versanddienstleister anzeigen möchtest, öffnest du den aufklappbaren Bereich *Auftrag / Versand*, suchst nach der Variable *Versanddienstleister* und setzt dann die entsprechende twig expression wie folgt in den Betreff deiner Vorlage ein:  `&#123;&#8288;&#123;order.formattedShipping.providerName&#125;&#8288;&#125;`.
+*_Beispiel:_* Wenn du im Betreff deiner Vorlage den Versanddienstleister anzeigen möchtest, öffnest du den aufklappbaren Bereich *Auftrag / Versand*, suchst nach der Variable *Versanddienstleister* und setzt dann die entsprechende twig expression wie folgt in den <<#betreff-aendern, Betreff>> deiner Vorlage ein:  `&#123;&#8288;&#123;order.formattedShipping.providerName&#125;&#8288;&#125;`.
 
 Code-Beispiele für den Betreff findest du im Kapitel <<#code-beispiele-betreff, Code-Beispiele für den Betreff>>.
 
