Move automatic despatch from system tree to assistant

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1157,19 +1157,20 @@ Dir stehen in plentymarkets mehrere Möglichkeiten zur Verfügung, den E-Mail-Ve
 [#automatischer-e-mail-versand]
 === Automatischen E-Mail-Versand einrichten
 
-Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die du mit einer Vorlage verknüpfen kannst. Wähle aus der Dropdown-Liste die Vorlage, die du zuvor im Menü *CRM » EmailBuilder (Testphase)* <<#vorlage-erstellen, erstellt>> hast. Dadurch wird bei Eintritt des Ereignisses diese Vorlage automatisch an deine Kund:innen versendet.
+Im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* im Schritt *Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die du mit einer Vorlage verknüpfen kannst. Wähle aus der Dropdown-Liste die Vorlage, die du zuvor im Menü *CRM » EmailBuilder (Testphase)* <<#vorlage-erstellen, erstellt>> hast. Dadurch wird bei Eintritt des Ereignisses diese Vorlage automatisch an deine Kund:innen versendet.
 
 [IMPORTANT]
 .Verknüpfung vor Löschen der E-Mail-Vorlage entfernen
 ====
-Das Löschen einer Vorlage, die mit einem Ereignis im Bereich *Automatischer Versand* verknüpft ist, kann zu unerwünschten Effekten führen. Entferne daher zunächst die Verknüpfung im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*, indem du in der Zeile des Ereignisses in der Dropdown-Liste die Option *Kein Versand* wählen. Anschließend löschst du die Vorlage im Menü *CRM » EmailBuilder (Testphase)*.
+Das Löschen einer Vorlage, die mit einem Ereignis im Schritt *Automatischer Versand* im Assistenten *E-Mail-Konten* verknüpft ist, kann zu unerwünschten Effekten führen. Entferne daher zunächst die Verknüpfung im Menü *Einrichtung » Assistenten » Grundeinrichtung* » Assistent *E-Mail-Konten* » Schritt: *Automatischer Versand*, indem du in der Zeile des Ereignisses in der Dropdown-Liste die Option *Nicht senden* wählen. Anschließend <<#vorlage-loeschen, löschst>> du die Vorlage im Menü *CRM » EmailBuilder (Testphase)*.
 ====
 
 [.instruction]
 Automatischen E-Mail-Versand einrichten:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*.
-. Wähle die in der Zeile des Ereignisses die Vorlage aus der Dropdown-Liste. Beachte dazu die Erläuterungen in <<#table-events-automatic-email-dispatch>>.
+. Öffne das Menü *Einrichtung » Assistenten » Grundeinrichtung*.
+. Öffne den Assistenten *E-Mail-Konten*.
+. Wähle im Schritt *Automatischer Versand* in der Zeile des Ereignisses die Vorlage aus der Dropdown-Liste. Beachte dazu die Erläuterungen in <<#table-events-automatic-email-dispatch>>.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [[table-events-automatic-email-dispatch]]
