--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -127,7 +127,7 @@ Prüfe außerdem in deinem gesamten plentymarkets System alle Stellen, an denen 
 
 * Ereignisaktionen
 * Ticket-Ereignisaktionen
-* Automatischer Versand (Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*)
+* Automatischer Versand (Menü *Einrichtung » Assistenten » Grundeinrichtung* » Assistent* *E-Mail-Konten* » Schritt: *Automatischer Versand*)
 * Prozesse
 * Aktionsmanager
 * Ticket-Aktionsmanager
