--- a/docs/de-de/modules/maerkte/pages/kauflux.adoc
+++ b/docs/de-de/modules/maerkte/pages/kauflux.adoc
@@ -474,8 +474,9 @@ Aktiviere den automatischen E-Mail-Versand beim Importieren von Aufträgen. Dazu
 [.instruction]
 E-Mail bei Auftragsimport senden:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*.
-. Wähle bei *Neue Bestellung über Kauflux* die zuvor erstellte E-Mail-Vorlage.
+. Öffne das Menü *Einrichtung » Assistenten » Grundeinrichtung*.
+. Öffne den Assistenten *E-Mail-Konten*.
+. Wähle im Schritt *Automatischer Versand* bei *Neue Bestellung über Kauflux* die zuvor erstellte E-Mail-Vorlage.
 . Speichere (terra:save[]) die Einstellungen.
 
 Über *E-Mail-Vorlage bearbeiten* wechselst du in das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Vorlagen* und kannst dort die E-Mail-Vorlage bearbeiten.
