--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-webshop.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-webshop.adoc
@@ -55,17 +55,18 @@ Standardlieferland einstellen:
 [#40]
 === Automatischen E-Mail-Versand einrichten
 
-Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die mit einer E-Mail-Vorlage verknüpft werden können. Wähle aus der Dropdown-Liste die E-Mail-Vorlage, die du zuvor im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Vorlagen* erstellt hast. Dadurch wird bei Eintritt des Ereignisses die E-Mail-Vorlage automatisch an den Kunden versendet.
+Im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* im Schritt *Automatischer Versand* stehen dir verschiedene Ereignisse zur Verfügung, die mit einer E-Mail-Vorlage verknüpft werden können. Wähle aus der Dropdown-Liste die E-Mail-Vorlage, die du zuvor im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Vorlagen* bzw. im Menü *CRM » EmailBuilder* erstellt hast. Dadurch wird bei Eintritt des Ereignisses die E-Mail-Vorlage automatisch an die Kund:in versendet.
 
 [.instruction]
 Automatischen E-Mail-Versand einrichten:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*.
-. Wähle in der Zeile des Ereignisses die von dir zuvor eingerichtete E-Mail-Vorlage aus der Dropdown-Liste. Beachte dazu die Erläuterungen in <<tabelle-ereignisse-automatischer-e-mail-versand>>.
+. Öffne das Menü *Einrichtung » Assistenten » Grundeinrichtung*.
+. Öffne den Assistenten *E-Mail-Konten*.
+. Wähle im Schritt *Automatischer Versand* in der Zeile des Ereignisses die von dir zuvor eingerichtete E-Mail-Vorlage aus der Dropdown-Liste. Beachte dazu die Erläuterungen in <<tabelle-ereignisse-automatischer-e-mail-versand>>.
 . *Speichere* die Einstellungen.
 
 [[tabelle-ereignisse-automatischer-e-mail-versand]]
-.Erläuterungen zu einigen Ereignissen im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*
+.Erläuterungen zu einigen Ereignissen im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* im Schritt *Automatischer Versand*
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
