--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -485,7 +485,7 @@ Generating new passwords for all contacts:
 [#email-reset-password]
 ==== Sending an email to reset the password
 
-Send an email template to your contact containing a link to change the password in your plentyShop. It is required that you have linked an email template from the EmailBuilder containing the variable *URL to change password* with the event *Send customer email to change password*. Carry out this setting in the *Setup » Client » [Select client] » Email » Automatic* menu.
+Send an email template to your contact containing a link to change the password in your plentyShop. It is required that you have linked an email template from the EmailBuilder containing the variable *URL to change password* with the event *Send customer email to change password*. Carry out this setting in the *Setup » Assistants » Basic setup* menu in the *Email accounts* assistant in the *Automatic despatch* step.
 
 For further information, refer to the xref:crm:emailbuilder-testphase.adoc#automate-email-despatch[EmailBuilder] page.
 
@@ -504,7 +504,7 @@ Sending an email to reset the password:
 [IMPORTANT]
 .Save appropriate variable in template for automatic despatch
 ====
-To ensure that the email to reset the password will be correctly sent to your customers, you have to save the appropriate variable in the template that you selected for the option *Send customer email to change password* in the *Setup » Client » [Select client] » Email » Automatic* menu.
+To ensure that the email to reset the password will be correctly sent to your customers, you have to save the appropriate variable in the template that you selected for the option *Send customer email to change password*  in the *Email accounts* assistant in the *Automatic despatch* menu. You can find the assistant in the *Setup » Assistants » Basic setup* menu.
 ====
 
 [#unlock-login]
