--- a/docs/en-gb/modules/crm/pages/sending-emails.adoc
+++ b/docs/en-gb/modules/crm/pages/sending-emails.adoc
@@ -636,12 +636,12 @@ You can send coupons and coupon codes via email. Simply attach them to emails as
 [#2300]
 == Setting up the automatic email despatch
 
-The *Setup» Client » [Select client] » Email » Automatic* menu contains various events that can be linked with an email template. Select the email template that you have previously xref:crm:sending-emails.adoc#1200[created] in the Setup » Client » [Select client] » Email » Templates menu from the drop-down list. This ensures that the email template is sent to your contact once the event occurs.
+The *Automatic despatch* step of the *Email accounts* assistant contains various events that can be linked with an email template. You can find the assistant in the *Setup » Assistants » Basic setup* menu. Select the email template that you have previously xref:crm:sending-emails.adoc#1200[created] in the from the drop-down list. This ensures that the email template is sent to your contact once the event occurs.
 
 [IMPORTANT]
 .Removing the link before deleting the email template
 ====
-Deleting an email template that is linked with an event in the *Automatic email* area may lead to undesired effects. Therefore, first go to *Setup » Client » [Select client] » Email » Automatic* and remove the link by selecting the option *Do not send* from the drop-down list in the line of the event. Afterwards, you delete the email template in the *Setup » Client » [Select client] » Email » Templates* menu.
+Deleting an email template that is linked with an event in the *Automatic despatch* step of the *Email accounts* assistant may lead to undesired effects. Therefore, first go to *Setup » Assistants » Basic setup* and remove the link by selecting the option *Do not send* from the drop-down list in the line of the event. Afterwards, delete the email template in the *Setup » Client » [Select client] » Email » Templates* or *CRM » EmailBuilder* menu.
 ====
 
 Learn in the following video tutorial how you link your email templates with fixed events and set up event procedures for the automatic email despatch:
@@ -653,8 +653,9 @@ video::214835758[vimeo, width=640, height=360]
 [.instruction]
 Setting up the automatic email despatch:
 
-. Go to *Setup » Client » [Select client] » Email » Automatic*.
-. Select an email template from the drop-down list in the line of the event. Note <<#table-events-automatic-email-despatch>>.
+. Go to *Setup » Assistants » Basic setup*.
+. Open the *Email accounts* assistant.
+. In the *Automatic despatch* step, select an email template from the drop-down list in the line of the event. Note <<#table-events-automatic-email-despatch>>.
 . *Save* (icon:save[role="green"]) the settings.
 
 <<#table-events-automatic-email-despatch>> lists explanations of some of the events.
@@ -694,7 +695,7 @@ The only requirement is that potential customers were registered and logged into
 [discrete]
 === Automatic email despatch taking a new order on eBay as an example
 
-An order is automatically created in plentymarkets after a contact has purchased an item on eBay. If you have xref:crm:sending-emails.adoc#1200[created] the email template "Order confirmation eBay" for example and selected this template from the drop-down list for the event *New order from eBay* in the *Setup » Client » [Select client] » Email » Automatic* menu, an email is automatically sent to the contact.
+An order is automatically created in plentymarkets after a contact has purchased an item on eBay. If you have xref:crm:sending-emails.adoc#1200[created] the email template "Order confirmation eBay" for example and selected this template from the drop-down list for the event *New order from eBay* in the *Automatic despatch* step of the *Email accounts* assistant, an email is automatically sent to the contact. You can find the assistant in the *Setup » Assistants » Basic setup* menu.
 
 Along with the automatic email despatch, a message can also be sent to the contact via the eBay messaging system. Go to *Setup » Markets » eBay » Settings*. Click on the *Account settings* tab and save the text in the sub-menu *Message after purchase*. For further information, refer to the xref:markets:ebay-setup.adoc#1500[Sending messages after purchase] chapter on the xref:markets:ebay-setup.adoc#[Setting up eBay] page of the manual.
 
