--- a/docs/en-gb/modules/crm/pages/sending-newsletters.adoc
+++ b/docs/en-gb/modules/crm/pages/sending-newsletters.adoc
@@ -159,7 +159,7 @@ Creating an email template:
 
 If the recipient of the email clicks on the link that was inserted with the template variable `$NewsletterConfirmURL`, the recipient confirms the newsletter registration and will receive from now on the newsletter to the saved email address.
 
-If you would like to use the xref:crm:sending-newsletters.adoc#800[double opt-in method], a further step is required. You have to create two templates and select them for the events *Newsletter opt-in* and *Newsletter opt-in confirmation* in the *Setup » Client » [Select client] » Email » Automatic* menu.
+If you would like to use the xref:crm:sending-newsletters.adoc#800[double opt-in method], a further step is required. You have to create two templates and select them for the events *Newsletter opt-in* and *Newsletter opt-in confirmation* in the *Email accounts* assistant in the *Automatic despatch* step. You can find the assistant in the *Setup » Assistants » Basic setup* menu.
 
 
 [[table-create-email-template]]
@@ -235,7 +235,7 @@ In the next step, link the email template that you have just created with the do
 [TIP]
 .Notes about the double opt-in method
 ====
-You have to xref:crm:sending-newsletters.adoc#700[create] 2 templates and select these for the events *Newsletter opt-in* and *Newsletter opt-in confirmation* in the *Setup » Client » [Select client] » Email » Automatic* menu. The selected template under *Newsletter opt-in* is sent when the customer has registered for the newsletter. This template should contain the confirmation link that the customer has to click in order to complete the newsletter registration. Use the template variable `$NewsletterConfirmURL` to display the confirmation link. This template variable contains the URL to confirm the newsletter registration. The selected template under *Newsletter opt-in confirmation* is sent when the customer has activated the confirmation link.
+You have to xref:crm:sending-newsletters.adoc#700[create] 2 templates and select these for the events *Newsletter opt-in* and *Newsletter opt-in confirmation* in the *Automatic despatch* step of the *Email accounts* assistant. You can find the assistant in the *Setup » Assistants » Basic setup* menu. The selected template under *Newsletter opt-in* is sent when the customer has registered for the newsletter. This template should contain the confirmation link that the customer has to click in order to complete the newsletter registration. Use the template variable `$NewsletterConfirmURL` to display the confirmation link. This template variable contains the URL to confirm the newsletter registration. The selected template under *Newsletter opt-in confirmation* is sent when the customer has activated the confirmation link.
 
 In the contact data record in the *CRM » Contacts » [Open contact]* menu in the *Contact details* area, the *Newsletter* option is activated automatically when the customer has registered for the newsletter during the order process and has confirmed the newsletter registration via the confirmation link.
 ====
@@ -243,9 +243,10 @@ In the contact data record in the *CRM » Contacts » [Open contact]* menu in th
 [.instruction]
 Linking the email template with the double opt-in function:
 
-. Go to *Setup » Client » [Select client] » Email » Automatic*.
-. Select the email template that was previously created from the *Newsletter opt-in* drop-down list.
-. Select the email template that was previously created from the *Newsletter opt-in confirmation* drop-down list.
+. Go to *Setup » Assistants » Basic setup*
+. Open the *Email accounts* assistant.
+. In the *Automatic despatch* step, select the email template that was previously created from the *Newsletter opt-in* drop-down list.
+. In the *Automatic despatch* step, select the email template that was previously created from the *Newsletter opt-in confirmation* drop-down list.
 . *Save* (icon:save[role="green"]) the settings.
 
 You can see the confirmation status by going to *Setup » CRM » Newsletter » plentymarkets » Emails*. Customers who confirmed that they want to receive the newsletter are designated with the status *[green]#confirmed#*. Customers who did not go through the double opt-in process are designated with the status *[red]#not confirmed#*.
