--- a/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
+++ b/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
@@ -550,7 +550,7 @@ A timer starts in the *Events* area when the message is created. This makes it p
 ====
 In the *Setup » CRM » Ticket system » Events* menu, it is possible to add the event *New event* and the filters *Service type*, *Bill* and *Duration*. This allows you to differentiate in more detail and thus to also send different email templates.
 
-Sending automatic email templates for service units in the *Setup » Client » [Select client] » Email » Automatic* menu still applies for events that were created in the contact data record.
+Sending automatic email templates for service units in the *Setup » Assistants » Basic setup* » Assistant: *Email accounts* » Step: *Automatic despatch* menu still applies for events that were created in the contact data record.
 
 *_Important:_* This function was deactivated for the ticket system. This is why you have to set up a new event procedure in the *Setup » CRM » Ticket system » Events* menu.
 ====
