--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -581,7 +581,9 @@ Automatic email to email address::
 [discrete]
 ===== Setting up the automatic email despatch:
 
-. Go to *Setup » Client » [Select client] » Email » Automatic*.
+. Go to *Setup » Assistants » Basic setup*.
+. Open the *Email accounts* assistant.
+. Go to the *Automatic despatch* step.
 . From the drop-down list *New order from eBay*, select the email template.
 . Save (terra:save[]) the setting.
 --
