--- a/docs/en-gb/modules/welcome/pages/quick-start-automating-processes.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-automating-processes.adoc
@@ -19,12 +19,12 @@ In general, plentymarkets offers you 4 different methods of automating your work
 == Automatically sending email templates
 
 In the step xref:welcome:quick-start-initial-settings.adoc#[initial settings], you learned how to set up the email templates for automatically sending email templates. +
-Now, use the menu *Setup » Client » [Select client] » Email » Automatic* to select which email template should be sent in specific situations. Some options, such as sending the email template *webshop: Incoming order* when receiving a new order via your webshop are already preset in this menu. Check these settings and adjust them where necessary. To do so, proceed as described below.
+Now, use the menu *Email accounts* assistant to select which email template should be sent in specific situations. You can find the assistant in the *Setup » Assistants » Basic setup* menu. Some options, such as sending the email template *Webshop: Incoming order* when receiving a new order via your webshop are already preset in this menu. Check these settings and adjust them where necessary. To do so, proceed as described below.
 
 [.instruction]
 Setting up automatic emails:
 
-. Go to *Setup » Client » [Select client] » Email » Automatic*.
+. Go to *Setup » Assistants » Basic setup*.
 . From the drop-down list next to the respective event, select an email template that should be sent automatically as soon as the event takes place.
 . Select the option *do not send* if _no_ email template should be sent.
 . *Save* (icon:save[role="green"]) the settings.
@@ -32,7 +32,7 @@ Setting up automatic emails:
 [WARNING]
 .Have you set up the email template correctly?
 ====
-In the *Setup » Client » [Select client] » Email » Automatic* menu, you should only select email templates that you have edited and completed with your individual data.
+In the *Automatic despatch* step of the *Email accounts* assistant, you should only select email templates that you have edited and completed with your individual data. You can find the assistant in the *Setup » Assistants » Basic setup* menu.
 ====
 
 [#20]
