--- a/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
@@ -159,7 +159,7 @@ E-Mail-Vorlage erstellen:
 
 Wenn Empfänger:innen der E-Mail auf den durch die Template-Variable `$NewsletterConfirmURL` eingefügten Link  klicken, bestätigen sie die Anmeldung zum Newsletter und erhalten ab sofort Newsletter an ihre E-Mail-Adresse.
 
-Wenn du die xref:crm:newsletter-versenden.adoc#800[Double-Opt-In-Methode] verwenden möchtest, ist ein weiterer Schritt notwendig. Du musst jeweils eine Vorlage erstellt haben und diese im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* für die Ereignisse *Newsletter Opt-In* und *Bestätigung Newsletter Opt-In* gewählt haben.
+Wenn du die xref:crm:newsletter-versenden.adoc#800[Double-Opt-In-Methode] verwenden möchtest, ist ein weiterer Schritt notwendig. Du musst jeweils eine Vorlage erstellt haben und diese im Menü *Einrichtung » Assistent » Grundeinrichtung* » Assistent: *E-Mail-Konten* » Schritt: *Automatischer Versand* für die Ereignisse *Newsletter Opt-In* und *Bestätigung Newsletter Opt-In* gewählt haben.
 
 
 [[table-create-email-template]]
@@ -235,7 +235,7 @@ Im nächsten Schritt verknüpfst du die soeben erstellte E-Mail-Vorlage mit der 
 [TIP]
 .Hinweise zur Double-Opt-In-Methode
 ====
-Wähle im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* 2 xref:crm:newsletter-versenden.adoc#700[zuvor erstellte] Vorlagen für die Ereignisse *Newsletter Opt-In* und *Bestätigung Newsletter Opt-In*. Die gewählte Vorlage unter *Newsletter Opt-In* wird versendet, wenn eine Person sich für deinen Newsletter anmeldet. Diese Vorlage sollte den Bestätigungslink enthalten, den die Person anklicken muss, um die Newsletter-Anmeldung abzuschließen. Den Bestätigungslink bildest du mit der Template-Variable `$NewsletterConfirmURL`, die die URL zur Bestätigung der Newsletter-Anmeldung beinhaltet, ab. Die gewählte Vorlage unter *Bestätigung Newsletter Opt-In* wird versendet, sobald die Person den Bestätigungslink aktiviert hat.
+Wähle im Menü *Einrichtung » Assistenten » Grundeinrichtung* » Assistent: *E-Mail-Konten* » Schritt: *Automatischer Versand* 2 xref:crm:newsletter-versenden.adoc#700[zuvor erstellte] Vorlagen für die Ereignisse *Newsletter Opt-In* und *Bestätigung Newsletter Opt-In*. Die gewählte Vorlage unter *Newsletter Opt-In* wird versendet, wenn eine Person sich für deinen Newsletter anmeldet. Diese Vorlage sollte den Bestätigungslink enthalten, den die Person anklicken muss, um die Newsletter-Anmeldung abzuschließen. Den Bestätigungslink bildest du mit der Template-Variable `$NewsletterConfirmURL`, die die URL zur Bestätigung der Newsletter-Anmeldung beinhaltet, ab. Die gewählte Vorlage unter *Bestätigung Newsletter Opt-In* wird versendet, sobald die Person den Bestätigungslink aktiviert hat.
 
 Im Kontaktdatensatz im Menü *CRM » Kontakte » [Kontakt öffnen]* im Bereich *Kontaktdetails* wird die Option *Newsletter* automatisch aktiviert, wenn die Person sich im Bestellvorgang für den Newsletter angemeldet und die Newsletter-Anmeldung über den Bestätigungslink bestätigt hat.
 ====
@@ -243,9 +243,10 @@ Im Kontaktdatensatz im Menü *CRM » Kontakte » [Kontakt öffnen]* im Bereich *
 [.instruction]
 E-Mail-Vorlagen mit der Double-Opt-In-Funktion verknüpfen:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*.
-. Wähle für die Option *Newsletter Opt-In* die soeben erstellte E-Mail-Vorlage aus der Dropdown-Liste.
-. Wähle für die Option *Bestätigung Newsletter Opt-In* die E-Mail-Vorlage aus der Dropdown-Liste.
+. Öffne das Menü *Einrichtung » Assistenten » Grundeinrichtung*. 
+. Öffne den Assistenten *E-Mail-Konten*.
+. Wähle im Schritt *Automatischer Versand* für die Option *Newsletter Opt-In* die soeben erstellte E-Mail-Vorlage aus der Dropdown-Liste.
+. Wähle im Schritt *Automatischer Versand* für die Option *Bestätigung Newsletter Opt-In* die E-Mail-Vorlage aus der Dropdown-Liste.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 Den Status der Bestätigung siehst du im Menü *Einrichtung » CRM » Newsletter » plentymarkets » E-Mails*. Bei Personen, die den Newsletter-Bezug nach der vorstehend beschriebenen Vorgehensweise bestätigt haben, ist dies am Status *[green]#bestätigt#* zu erkennen. Bei Personen, die das Double-Opt-in nicht oder noch nicht durchgeführt haben, steht dort *[red]#nicht bestätigt#*.
