--- a/docs/de-de/modules/crm/pages/praxisbeispiel-migration-vorlagen.adoc
+++ b/docs/de-de/modules/crm/pages/praxisbeispiel-migration-vorlagen.adoc
@@ -34,7 +34,7 @@ Neben dem Prüfen des <<#inhalt-migrierte-vorlagen, Inhalts der migrierten Vorla
 Je nachdem, welche Automatisierungsmöglichkeiten du in plentymarkets nutzt, prüfe also die folgenden Menüs:
 
 * xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] im Menü *Einrichtung » Aufträge » Ereignisse*
-* xref:crm:emailbuilder.adoc#automatischer-e-mail-versand[Automatischer Versand] im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*
+* xref:crm:emailbuilder.adoc#automatischer-e-mail-versand[Automatischer Versand] im Menü *Einrichtung » Assistenten » Grundeinrichtung* » Assistent: *E-Mail-Konten* » Schritt: *Automatischer Versand*
 * xref:automatisierung:prozesse.adoc#200[Prozesse] im Menü *Einrichtung » Prozesse*
 * xref:automatisierung:aktionsmanager.adoc#[Aktionsmanager] im Menü *Einrichtung » Aufträge » Aktionen*
 * xref:crm:ticketsystem-nutzen.adoc#2900[Ticket-Ereignisaktionen] im Menü *Einrichtung » CRM » Ticketsystem » Ereignisse*
