--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-automatisierung.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-automatisierung.adoc
@@ -19,20 +19,21 @@ Im Allgemeinen bietet dir plentymarkets 4 verschiedene Möglichkeiten zur Automa
 == Automatischer E-Mail-Versand
 
 Im Schritt xref:willkommen:schnelleinstieg-basiseinstellungen.adoc[Basiseinstellungen] wurde beschrieben, wie du die E-Mail-Vorlagen für den automatischen Versand gestaltest. +
-Nun wählst du im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*, in welchen Fällen eine bestimmte E-Mail-Vorlage verschickt werden soll. Einige Optionen, wie der Versand der Vorlage *Webshop: Eingangsbestätigung Bestellung* beim Eingang eines neuen Auftrags im Webshop, sind in diesem Menü bereits voreingestellt. Überprüfe diese Einstellungen und passe Sie, wo nötig, an. Gehe dazu wie im Folgenden beschrieben vor.
+Nun wählst du im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* im Schritt *Automatischer Versand*, in welchen Fällen eine bestimmte E-Mail-Vorlage verschickt werden soll. Einige Optionen, wie der Versand der Vorlage *Webshop: Eingangsbestätigung Bestellung* beim Eingang eines neuen Auftrags im Webshop, sind in diesem Menü bereits voreingestellt. Überprüfe diese Einstellungen und passe Sie, wo nötig, an. Gehe dazu wie im Folgenden beschrieben vor.
 
 [.instruction]
 Automatischen E-Mail-Versand einrichten:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand*.
-. Wähle aus der Dropdown-Liste neben dem jeweiligen Ereignis eine E-Mail-Vorlage aus, die versendet werden soll.
-. Wähle die Option *kein Versand*, wenn eine E-Mail-Vorlage _nicht_ versendet werden soll.
+. Öffne das Menü *Einrichtung » Assistenten » Grundeinrichtung*.
+. Öffne den Assistenten *E-Mail-Konten*.
+. Wähle im Schritt *Automatischer Versand* aus der Dropdown-Liste neben dem jeweiligen Ereignis eine E-Mail-Vorlage aus, die versendet werden soll.
+. Wähle die Option *Nicht senden*, wenn eine E-Mail-Vorlage _nicht_ versendet werden soll.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
 [WARNING]
 .E-Mail-Vorlage korrekt eingerichtet?
 ====
-Im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* solltest du nur E-Mail-Vorlagen wählen, die du zuvor bearbeitet und mit deinen eigenen Daten ergänzt hast.
+Im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* solltest du im Schritt *Automatischer Versand* nur E-Mail-Vorlagen wählen, die du zuvor bearbeitet und mit deinen eigenen Daten ergänzt hast.
 ====
 
 [#20]
