--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-basiseinstellungen.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-basiseinstellungen.adoc
@@ -138,7 +138,7 @@ Die Texte für die Widerrufsbelehrung und die AGB speicherst du im Menü *Einric
 
 [TIP]
 ====
-Es gibt zahlreiche weitere E-Mail-Vorlagen, die bereits in deinem plentymarkets System vorhanden sind. Diese E-Mail-Vorlagen musst du ggf. anpassen und mit einem Ereignis im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* verknüpfen oder eine Ereignisaktion einrichten. Weitere Informationen findest du auf der Schnelleinstiegsseite xref:willkommen:schnelleinstieg-automatisierung.adoc#[Vorgänge automatisieren].
+Es gibt zahlreiche weitere E-Mail-Vorlagen, die bereits in deinem plentymarkets System vorhanden sind. Diese E-Mail-Vorlagen musst du ggf. anpassen und mit einem Ereignis im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* im Schritt *Automatischer Versand* verknüpfen oder eine Ereignisaktion einrichten. Weitere Informationen findest du auf der Schnelleinstiegsseite xref:willkommen:schnelleinstieg-automatisierung.adoc#[Vorgänge automatisieren].
 ====
 
 [#550]
@@ -236,7 +236,7 @@ E-Mail-Vorlage anpassen:
 *_Hinweis:_* Du kannst in der Betreffzeile auch Template-Variablen einfügen.
 |====
 
-Wenn du die E-Mail-Vorlage *Webshop: Eingangsbestätigung Bestellung* nach deinen Erfordernissen angepasst und gespeichert hast, wird diese Vorlage auch automatisch an deine Kund:innen versendet, sobald sie in deinem Webshop bestellen, weil diese Vorlage im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Automatischer Versand* bereits mit dem Ereignis *Neue Bestellung über den Webshop* verknüpft ist.
+Wenn du die E-Mail-Vorlage *Webshop: Eingangsbestätigung Bestellung* nach deinen Erfordernissen angepasst und gespeichert hast, wird diese Vorlage auch automatisch an deine Kund:innen versendet, sobald sie in deinem Webshop bestellen, weil diese Vorlage im Menü *Einrichtung » Assistenten » Grundeinrichtung* im Assistenten *E-Mail-Konten* im Menü *Automatischer Versand* bereits mit dem Ereignis *Neue Bestellung über den Webshop* verknüpft ist.
 
 [[table-template-variables-legal]]
 .Template-Variablen für die rechtlichen Angaben
