--- a/docs/en-gb/modules/crm/pages/faq.adoc
+++ b/docs/en-gb/modules/crm/pages/faq.adoc
@@ -126,7 +126,7 @@ Check also in your entire plentymarkets system all menus where you linked email 
 
 * Event procedures
 * Ticket event procedures
-* (*Setup » Client » [Select client] » Email » Automatic* menu)
+* Automatic despatch (*Setup » Assistants » Basic setup* menu » Assistant: *Email accounts* » Step: *Automatic despatch*)
 * Processes
 * Procedure manager
 * Ticket procedure manager
