--- a/docs/en-gb/modules/welcome/pages/quick-start-initial-settings.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-initial-settings.adoc
@@ -138,7 +138,7 @@ Save the texts for the cancellation rights and the terms and conditions in the *
 
 [TIP]
 ====
-There are many more email templates that are already available in your plentymarkets system. Adjust these email templates, if required, and link them with an event in the *Setup » Client » [Select client] » Email » Automatic* menu or set up an event procedure. For further information refer to the quick start page xref:welcome:quick-start-automating-processes.adoc#[Automating processes].
+There are many more email templates that are already available in your plentymarkets system. Adjust these email templates, if required, and link them with an event in the *Setup » Assistants » Basic setup* » Assistant: *Email accounts* » Step: *Automatic despatch* menu or set up an event procedure. For further information refer to the quick start page xref:welcome:quick-start-automating-processes.adoc#[Automating processes].
 ====
 
 [#550]
@@ -236,7 +236,7 @@ Customising the email template:
 *_Note:_* It is possible to insert template variables in the subject line.
 |====
 
-After you have adjusted and saved the email template *Online store: Confirmation of store order*, this template will automatically be sent to your customers when they place an order in your online shop. This is because this template is already linked with the event *New order via online store* in the *Setup » Client » [Select client] » Email » Automatic* menu.
+After you have adjusted and saved the email template *Online store: Confirmation of store order*, this template will automatically be sent to your customers when they place an order in your online shop. This is because this template is already linked with the event *New order via online store* in the *Automatic despatch* step of the *Email accounts* assistant. You can find the assistant in the *Setup » Assistants » Basic setup* menu.
 
 [[table-template-variables-legal]]
 .Template variables for legal information
