update assistant step

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -173,7 +173,7 @@ Im letzten Abschnitt wählst du die Abonnent:innen, die bei neuen Nachrichten in
 [#testmodus-inaktiv]
 ==== Testmodus auf inaktiv setzen
 
-Damit du Nachrichten mit dem Messenger versenden kannst, ist es erforderlich, dass der Testmodus im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* auf *inaktiv* steht.
+Damit du Nachrichten mit dem Messenger versenden kannst, ist es erforderlich, dass der Live-Modus im Assistenten *E-Mail-Konten* im Schritt *Zugangsdaten* aktiviert (material:check_box[role=skyBlue]) wird. 
 
 Das Setzen des Testmodus auf *inaktiv* kannst du in diesem Schritt erledigen, ohne den Assistenten verlassen zu müssen. Aktiviere (material:check_box[role=skyBlue]) dazu die Einstellung *Live-Modus aktivieren*.
 
