--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -150,7 +150,7 @@ In the last section, select the subscribers who should be informed in case of ne
 [#test-mode-inactive]
 ==== Setting test mode to inactive
 
-To be able to send messages with the messenger, the test mode in the *Setup » Client » [Select client] » Email » Login details* menu has to be set to *inactive*.
+To be able to send messages with the messenger, the live mode in the *Email accounts* assistant in the *Login details* step has to be activated (material:check_box[role=skyBlue]).
 
 Setting the test mode to *inactive* can be done in this step without having to leave the assistant. To do so, select (material:check_box[role=skyBlue]) the option *Activate live mode*.
 
