--- a/docs/de-de/modules/daten/partials/catalogues-manage.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-manage.adoc
@@ -82,8 +82,9 @@ Einen Katalog löschen::
 +
 --
 [.instruction]
-Kataloge löschen:
+Einen Katalog löschen:
 
+//tag::delete-catalogue[]
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
 . Klicke in der Zeile des Katalogs, den du löschen möchtest, auf die weiteren Aktionen (material:more_vert[]).
@@ -97,7 +98,7 @@ Kataloge löschen:
 → Eine Sicherheitsabfrage wird eingeblendet.
 . Bestätige den Löschvorgang. +
 → Der Katalog wird gelöscht.
-
+//end::delete-catalogue[]
 --
 
 Mehrere Kataloge löschen::
