--- a/docs/de-de/modules/daten/partials/catalogue-menu.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-menu.adoc
@@ -101,7 +101,7 @@ ifdef::file-export[]
 image:daten:catalogue-default-toolbar.png[]
 endif::file-export[]
 
-[cols="1a,7a"]
+[cols="1a,5a"]
 |===
 | icon:save[role="darkGrey"]
 | Speichert die Einstellungen des Katalogs.
@@ -134,20 +134,32 @@ Informationen zum Status des Katalogs werden angezeigt.
 | material:more_vert[]
 | Blendet weitere Aktionen ein.
 
-[cols="1a,7a“]
+[cols="1a,7a"]
 !===
-! material:history[]
-! Stellt eine ältere Version des Katalogs wieder her. Die letzten 100 Versionen des Katalogs sind verfügbar.
-
-! material:delete[]
-! Löscht den Katalog. (xref:daten:catalogues-manage.adoc#210[Wie geht das?])
-!===
-
 ifdef::marketplace-export[]
 ! icon:toggle-off[role="darkGrey"]
 ! Blendet optionale Marktplatz-Datenfelder ein oder aus.
 endif::marketplace-export[]
 
+! material:history[]
+! Stellt eine ältere Version des Katalogs wieder her. Die letzten 100 Versionen des Katalogs sind verfügbar.
+
+[.collapseBox]
+.Wie stellt man eine andere Katalogversion wieder her?
+--
+include::partial$catalogues-manage.adoc[tag=reset-catalogue]
+--
+
+! material:delete[]
+! Löscht den Katalog.
+
+[.collapseBox]
+.Wie löscht man einen Katalog?
+--
+include::partial$catalogues-manage.adoc[tag=delete-catalogue]
+--
+
+!===
 |===
 
 ifdef::file-export[]
