--- a/docs/de-de/modules/daten/partials/catalogues-manage.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-manage.adoc
@@ -128,6 +128,7 @@ Mehrere Kataloge löschen:
 [.instruction]
 Katalog-Version wiederherstellen:
 
+//tag::reset-catalogue[]
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
 . *_Möglichkeit 1:_* In der Katalogübersicht
@@ -141,6 +142,7 @@ Katalog-Version wiederherstellen:
 *_Tipp:_* Die letzten 100 Versionen des Katalogs sind verfügbar.
 . Klicke auf *Wiederherstellen*. +
 → Die Version des Katalogs wird wiederhergestellt und in der Übersicht angezeigt.
+//end::reset-catalogue[]
 
 [#240]
 == Gelöschten Katalog wiederherstellen
