--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -168,6 +168,8 @@ Die folgenden Platzhalter sind verfügbar:
 
 *_Beispiele für die Verwendung von Platzhaltern:_*
 
+// TODO: Beispiele als Tabelle!
+
 * Eingabe 1: `artikel-export_$year_$month_$day`
 * Ergebnis 1: `artikel-export_2022_01_02.csv`
 
