--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -168,15 +168,17 @@ Die folgenden Platzhalter sind verfügbar:
 
 *_Beispiele für die Verwendung von Platzhaltern:_*
 
-* Eingabe 1: `artikel-export_$year_$month_$day`
-* Ergebnis 1: `artikel-export_2022_01_02.csv`
+[cols="1a,1a"]
+!===
+!Eingabe !Ergebnis
 
-'''
+! `artikel-export_$year_$month_$day`
+! * `artikel-export_2022_01_02.csv`
 
-* Eingabe 2: `$type_$format_$year_$month_$day`
-* Ergebnis 2:
-  ** `bestellung_bestellung_2022_01_02.csv` +
+! `$type_$format_$year_$month_$day`
+!  ** `bestellung_bestellung_2022_01_02.csv` +
   ** `check24_offer_2020_10_25.csv`
+!===
 
 | *Format*
 | In welchem Dateiformat sollen die Daten exportiert werden?
