--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -135,16 +135,16 @@ Hier sind alle Kataloge aufgelistet.
 
 image::daten:catalogue-overview-list.png[]
 
-[cols="1,3a"]
+[cols="1,4a"]
 |===
 | material:check_box_outline_blank[]
-| Wähle einen oder mehrere Kataloge. Die Aktionen in der Symbolleiste kannst du so auf mehrere Kataloge gleichzeitig anwenden.
+| Wähle einen oder mehrere Kataloge. So kannst du die Aktionen in der Symbolleiste auf mehrere Kataloge gleichzeitig anwenden.
 
 | *Aktiv*
-| Ist der Katalog aktiv? +
-Du kannst hier auch den Katalog aktivieren oder deaktivieren. +
-material:toggle_off[] = Der Katalog ist nicht aktiv. Es werden also keine Daten exportiert. +
-material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. Wie oft und wohin hängt von deinen Exporteinstellungen ab.
+| Ist der Katalog aktiv? Über den Toggle kannst du den Katalog aktivieren oder deaktivieren. +
+
+* material:toggle_off[] = Der Katalog ist nicht aktiv. Es werden also keine Daten exportiert.
+* material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. Wie oft und wohin hängt von deinen Exporteinstellungen ab.
 
 | *Name*
 | Der Name des Katalogs
@@ -161,15 +161,25 @@ material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. W
 | *Aktionen*
 | In dieser Spalte führst du Aktionen nur für einen Katalog aus.
 
-[cols="2,3"]
+[cols="1,5a"]
 !===
 ! material:file_download[] *Asynchroner Download*
 ! Starte den manuellen Download der Katalogdaten in eine Datei.
-// TODO: Insert link
+
+[.collapseBox]
+.Wie geht ein Asynchroner Download?
+--
+include::partial$catalogue-manual-download.adoc[tag=async-export]
+--
 
 ! material:play_circle_outline[] *Live-Export*
 ! Lade die Katalogdaten als Datei herunter. Diese Datei wird automatisch auf deinem Rechner gespeichert, wenn der Export abgeschlossen ist.
-// TODO: Insert link
+
+[.collapseBox]
+.Wie geht ein Live-Export?
+--
+include::partial$catalogue-manual-download.adoc[tag=live-export]
+--
 
 ! material:preview[] *Vorschau*
 ! Erstelle eine Vorschau des Exports. Die Vorschau enthält die ersten fünf Datenzeilen des Exports.
@@ -184,8 +194,20 @@ material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. W
 ! material:history[] *Katalog-Version wiederherstellen*
 ! Stelle eine frühere Version des Katalogs wieder her. Die letzten 100 Versionen des Katalogs sind verfügbar.
 
+[.collapseBox]
+.Wie stellt man eine andere Katalogversion wieder her?
+--
+include::partial$catalogues-manage.adoc[tag=reset-catalogue]
+--
+
 ! material:delete[] *Löschen*
 ! Lösche den Katalog.
+
+[.collapseBox]
+.Wie löscht man einen Katalog?
+--
+include::partial$catalogues-manage.adoc[tag=delete-catalogue]
+--
 !===
 |===
 
